# triagewise-lite

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  llm-tiers.yaml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/agents/: constitution-reviewer.md  general-reviewer.md  review-auditor.md
.claude/skills/iterationClose/: SKILL.md
.claude/skills/iterationStart/: SKILL.md
.dvc/: config
.github/workflows/: ci.yml
app/: config.py
app/cli/: batch.py  judge.py  loop.py  main.py  promote.py
app/domain/: drift.py  judge.py  promotion.py  triage.py
app/llm/: cassettes.py  router.py  semcache.py  slo.py  tiers.py
app/observability/: judge.py  phoenix.py
app/persistence/: jsonl.py  promotion_log.py  prompts.py  tickets.py
app/ui/: __init__.py  dashboard.py  sources.py
app/workflow/: eval_assets.py  judge_flow.py  promotion_flow.py  triage_flow.py
dashboard/: Dockerfile  requirements.txt
data/: .gitignore  golden.jsonl.dvc
docs/: tech-decisions.md
docs/iterations/: README.md
docs/iterations/00/: demo.md  explainer.md  learnings.md
docs/iterations/01/: demo.md  explainer.md  learnings.md
docs/iterations/02/: demo.md  explainer.md  learnings.md
docs/iterations/03/: demo.md  explainer.md  learnings.md
docs/iterations/04/: demo.md  explainer.md  learnings.md
docs/iterations/05/: demo.md  explainer.md  learnings.md
docs/iterations/05b/: demo.md  explainer.md  learnings.md
docs/iterations/06/: demo.md  explainer.md  learnings.md
docs/iterations/06b/: demo.md  explainer.md  learnings.md
docs/iterations/07/: demo.md  explainer.md  learnings.md
eval/: outputs.json  promptfooconfig.yaml  replay_provider.py  tests.yaml
eval/prompts/: champion.json
fixtures/: replies.jsonl  tickets.jsonl  tickets_postrelease.jsonl
scripts/: author_cassette.py  build_eval.py  drift_report.py  extract_eval_outputs.py  judge_report.py  register_prompt.py  show_prompt.py
specs/00/: spec.md
specs/01/: spec.md
specs/02/: spec.md
specs/03/: spec.md
specs/04/: spec.md
specs/05/: spec.md
specs/05b/: spec.md
specs/06/: spec.md
specs/06b/: spec.md
specs/07/: spec.md
tests/: test_dashboard_sources.py  test_drift_monitoring.py  test_eval_assets.py  test_judge.py  test_litellm_discipline.py  test_loop.py  test_promotion.py  test_replay_provider.py  test_route_replay.py  test_semcache.py
