[project]
name = "triagewise-lite"
version = "0.0.0"
description = "LLMOps control plane over a synthetic ticket-triage fixture (existence-gate, not accuracy-gate)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "pyyaml>=6,<7",
    # LiteLLM: SDK-only, never Proxy (CLAUDE.md rule 5). Exact pin lives in uv.lock.
    "litellm>=1.55,<2",
    # MLflow Prompt Registry (iter 1). Full mlflow, not skinny: the sqlite registry store backs
    # offline tests. A uv-env dep, not a host runtime (tech-decisions: not clutter). Pin in uv.lock.
    "mlflow>=3.1,<4",
    # Semantic-cache embeddings (iter 4): local ONNX, $0 per call, lazily imported — replay
    # with the cache off never loads it. Pin in uv.lock.
    "fastembed>=0.6,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "mypy>=1.10",
    "types-PyYAML",
    "dvc>=3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[[tool.mypy.overrides]]
# mlflow ships no usable type stubs; the prompt-registry surface is exercised via tests.
module = "mlflow.*"
ignore_missing_imports = true
