[project]
name = "triagewise-lite"
version = "0.0.0"
description = "LLMOps control plane over a synthetic ticket-triage fixture (existence-gate, not accuracy-gate)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "pyyaml>=6,<7",
    # LiteLLM: SDK-only, never Proxy (CLAUDE.md rule 5). Exact pin lives in uv.lock.
    "litellm>=1.55,<2",
    # MLflow Prompt Registry (iter 1). Full mlflow, not skinny: the sqlite registry store backs
    # offline tests. A uv-env dep, not a host runtime (tech-decisions: not clutter). Pin in uv.lock.
    "mlflow>=3.1,<4",
    # Semantic-cache embeddings (iter 4): local ONNX, $0 per call, lazily imported — replay
    # with the cache off never loads it. Pin in uv.lock.
    "fastembed>=0.6,<1",
    # Phoenix wiring (iter 5a), not the server — that runs in Docker. Both lazily imported:
    # -otel exports spans (only when PHOENIX_ENABLED=1), -client reads them back for the
    # drift report (rule 8: verify the store, not the UI). Pins in uv.lock.
    "arize-phoenix-otel>=0.16.1,<1",
    "arize-phoenix-client>=2.12,<3",
    # Online LLM-as-judge harness (iter 5b) — owns its LLM call (tech-decisions exception,
    # like promptfoo), so it's live-gated; lazily imported, replay/CI never load it. Its
    # OpenAI client is the openai SDK already present via litellm. Pin in uv.lock.
    "arize-phoenix-evals>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "mypy>=1.10",
    "types-PyYAML",
    "dvc>=3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -p no:phoenix — arize-phoenix-client ships an auto-loaded pytest plugin; without this every
# test run silently imports `phoenix.*`, defeating the tracing-off-imports-nothing gate.
addopts = "-q -p no:phoenix"

[[tool.mypy.overrides]]
# mlflow ships no usable type stubs; the prompt-registry surface is exercised via tests.
module = "mlflow.*"
ignore_missing_imports = true
